2000-07-04  Sven Wischnowsky  <wischnow@zsh.org>

	* 12156: Completion/Core/_expand, Completion/Core/_path_files: add
 	some $(print...)s because of possible math-parse errors
	
2000-07-03  Adam Spiers  <adam@spiers.net>

	* 12152: Completion/User/_perl: tweak completion of Perl script
	parameters to perl.

2000-07-03  Bart Schaefer  <schaefer@zsh.org>

	* 12151: Test/Makefile.in, Test/comptest: Point ZDOTDIR into the
	Test directory itself, and clean up .zcompdump after testing.

	* 12148: Completion/Core/_path_files: Followup to 12133 as
	suggested by Sven in 12137: Don't merge display-ordering glob
	flags into the parens in $(...) expressions.

2000-07-03  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12146: Doc/Makefile.in: reintroduce mysteriously disappeared
	code do install info files in directory.

	* 12140: Completion/Core/compinit, Completion/Core/compinstall,
	Doc/Zsh/compsys.yo: compinstall calls compinit after styles
	are defined; compinit checks for _expand completer and if
	necessary rebinds ^i to complete-word.

	* Config/version.mk: 3.1.9-dev-2.

	* 12138: Src/params.c, Test/06arith.ztst: setting of array
	elements in math context didn't work (ever). 

	* 12121: Src/utils.c, Doc/Zsh/options.yo: save and restore stopmsg
	for precmd, fix #ifdef's for variable declaration in read_poll().

2000-07-03  Sven Wischnowsky  <wischnow@zsh.org>

	* 12134: Completion/Core/_main_complete, Doc/Zsh/compsys.yo,
 	Doc/Zsh/mod_complist.yo, Src/Zle/comp.h, Src/Zle/compcore.c,
 	Src/Zle/complist.c: change format style with warnings tag, don't
 	add descriptions as matches; make a-a-i-n-h in menu selection work
 	even without matches
	
2000-07-02  Bart Schaefer  <schaefer@zsh.org>

	* 12133: Completion/Core/_expand, Completion/Core/_path_files:
	Discard error output from parameter expansions and use "eval" to
	protect the completion system from parse errors and other garbage
	in the strings taken from the command line.
